# calclab4

./: CMakeLists.txt
data/: matrix.txt  testmatrix.txt
project/: eigen_solver.h  main.cpp  matrix_utils.h  stat_holder.h  system_solver.h  utils.h
report/: document.tex  signrotation.tex
